Update pipeline test-dispatch

--- a/.harness/testdispatch.yaml
+++ b/.harness/testdispatch.yaml
@@ -38,3 +38,8 @@ pipeline:
                       uses: github/codeql-action/init@v1
                       with:
                         languages: <+matrix.language>
+        strategy:
+          matrix:
+            language:
+              - javascript
+              - python
